guess the word and display correct & wrong color added

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ header > h1 {
 }
 
 header > p {
+   margin-left: auto;
+   margin-right: auto;
     font-size: 0.875rem;
     max-width: 350px;
     color: #8E8E8E;
@@ -46,11 +48,66 @@ section.game-status > p{
 section.language-chips{
   display: flex;
   flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
   gap: 5px;
   justify-content: center;
-  max-width: 350px;
+  max-width: 450px;
 }
 span.chips{
   border-radius: 5px;
   padding: 4.5px;
+}
+section.word{
+margin: 20px;
+display: flex;
+justify-content: center;
+ gap: 3px;
+}
+
+section.word> span{
+  height: 40px;
+  width: 40px;
+  background-color: #323232;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.125rem;
+  border-bottom: 1px solid #F9F4DA;
+  
+}
+section.keyboard{
+  display: flex ;
+  flex-wrap: wrap;
+  gap: 12px;
+  justify-content: center;
+  max-width: 450px;
+}
+
+section.keyboard >button{
+  height: 40px;
+  width: 40px;
+  background-color: #FCBA29;
+  border: 1px solid #D7D7D7;
+  border-radius: 4px;
+  cursor: pointer;
+}
+section.keyboard > button.correct {
+    background-color: #10A95B;
+}
+
+section.keyboard > button.wrong {
+    background-color: #EC5D49;
+}
+button.new-game {
+    background-color: #11B5E5;
+    border: 1px solid #D7D7D7;
+    border-radius: 4px;
+    width: 225px;
+    height: 40px;
+    padding: 6px 12px;
+    margin-top: 20px;
+    display: block;  /*single element to move center first we change to block*/
+    margin-inline: auto; /* margin-left,margin-right: auto like that*/
+    cursor: pointer;
 }
